Corrección en imágenes de los card para que queden todos del mismo tamaño en desktop
- Además se agregan comentarios de las secciones y CDNs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,17 @@ nav.nav-color-toggler {
     }
 }
 
+.card-img-top {
+    height: auto;
+}
+
+@media only screen and (min-width: 767px) {
+    .card-img-top {        
+        object-fit: cover;
+        height: 172px;
+    }
+}
+
 footer a {
     color: #fff;
     text-decoration: none;
