Se agrega popover a las imágenes del card y se agrega js con un alert cuando se presione el botón enviar del formulario

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ nav.nav-color-toggler {
 
 .card-img-top {
     height: auto;
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 767px) {
@@ -48,6 +49,10 @@ nav.nav-color-toggler {
         object-fit: cover;
         height: 172px;
     }
+}
+
+.popover-header {
+    color: #000;
 }
 
 footer a {
